ajustes no login de tenants