@@ -7,6 +7,7 @@ import io.snortexware.sisflow.entities.UserProfile;
 import io.snortexware.sisflow.repositories.TicketAttachmentRepository;
 import io.snortexware.sisflow.repositories.TicketRepository;
 import io.snortexware.sisflow.repositories.UserProfileRepository;
+import io.snortexware.sisflow.security.exceptions.AppException;
 import io.snortexware.sisflow.services.AuthorizationService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -15,7 +16,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.server.ResponseStatusException;
 
 import java.time.OffsetDateTime;
 import java.util.List;
@@ -32,106 +32,55 @@ public class TicketAttachmentController {
     private final AuthorizationService authorizationService;
 
     @GetMapping
-    public ResponseEntity<List<TicketAttachment>> list(
-            @PathVariable UUID ticketId,
-            @AuthenticationPrincipal UUID callerId
-    ) {
-        if (callerId == null) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
-        }
-        
-        // SECURITY: Verify user has access to this ticket
-        Ticket ticket = ticketRepository.findById(ticketId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Ticket not found"));
-        
-        try {
-            authorizationService.validateCanViewTicket(callerId, ticket);
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
-        }
-        
+    public ResponseEntity<List<TicketAttachment>> list(@PathVariable UUID ticketId,
+            @AuthenticationPrincipal UUID callerId) {
+        if (callerId == null) throw AppException.unauthorized();
+        Ticket ticket = ticketRepository.findById(ticketId).orElseThrow(AppException::notFound);
+        authorizationService.validateCanViewTicket(callerId, ticket);
         return ResponseEntity.ok(attachmentRepository.findByTicketIdOrderByCreatedAtDesc(ticketId));
     }
 
     @PostMapping
     @Transactional
-    public ResponseEntity<TicketAttachment> create(
-            @PathVariable UUID ticketId,
+    public ResponseEntity<TicketAttachment> create(@PathVariable UUID ticketId,
             @Valid @RequestBody CreateAttachmentRequest request,
             @AuthenticationPrincipal UUID callerId) {
+        if (callerId == null) throw AppException.unauthorized();
 
-        if (callerId == null) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
-        }
+        Ticket ticket = ticketRepository.findById(ticketId).orElseThrow(AppException::notFound);
+        authorizationService.validateCanViewTicket(callerId, ticket);
 
-        Ticket ticket = ticketRepository.findById(ticketId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Ticket not found"));
+        UserProfile uploader = userProfileRepository.findById(callerId).orElseThrow(AppException::unauthorized);
 
-        // SECURITY: Verify user has access to this ticket
-        try {
-            authorizationService.validateCanViewTicket(callerId, ticket);
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
-        }
-
-        UserProfile uploader = userProfileRepository.findById(callerId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.UNAUTHORIZED));
-
-        // SECURITY: Validate file URL to prevent malicious uploads
-        if (request.getFileUrl() == null || request.getFileUrl().trim().isEmpty()) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "File URL is required");
-        }
-        
-        // SECURITY: Validate file name to prevent path traversal
-        if (request.getFileName() == null || request.getFileName().contains("..") || 
-            request.getFileName().contains("/") || request.getFileName().contains("\\")) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid file name");
-        }
+        if (request.getFileUrl() == null || request.getFileUrl().isBlank()) throw AppException.badRequest();
+        if (request.getFileName() == null || request.getFileName().contains("..")
+                || request.getFileName().contains("/") || request.getFileName().contains("\\"))
+            throw AppException.badRequest();
 
         TicketAttachment attachment = TicketAttachment.builder()
-                .ticket(ticket)
-                .uploadedBy(uploader)
-                .fileName(request.getFileName())
-                .fileUrl(request.getFileUrl())
-                .fileSize(request.getFileSize())
-                .mimeType(request.getMimeType())
-                .createdAt(OffsetDateTime.now())
-                .build();
+                .ticket(ticket).uploadedBy(uploader)
+                .fileName(request.getFileName()).fileUrl(request.getFileUrl())
+                .fileSize(request.getFileSize()).mimeType(request.getMimeType())
+                .createdAt(OffsetDateTime.now()).build();
 
         return ResponseEntity.status(HttpStatus.CREATED).body(attachmentRepository.save(attachment));
     }
 
     @DeleteMapping("/{id}")
     @Transactional
-    public ResponseEntity<Void> delete(
-            @PathVariable UUID ticketId, 
-            @PathVariable UUID id,
+    public ResponseEntity<Void> delete(@PathVariable UUID ticketId, @PathVariable UUID id,
             @AuthenticationPrincipal UUID callerId) {
-        
-        if (callerId == null) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
-        }
-        
-        TicketAttachment attachment = attachmentRepository.findById(id)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
-        
-        if (!attachment.getTicket().getId().equals(ticketId)) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND);
-        }
-        
-        // SECURITY: Verify user has access to this ticket
-        try {
-            authorizationService.validateCanViewTicket(callerId, attachment.getTicket());
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
-        }
-        
-        // SECURITY: Only the uploader or moderators+ can delete attachments
-        if (!attachment.getUploadedBy().getId().equals(callerId) && 
-            !authorizationService.isModeratorOrAbove(callerId)) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
-        }
-        
+        if (callerId == null) throw AppException.unauthorized();
+
+        TicketAttachment attachment = attachmentRepository.findById(id).orElseThrow(AppException::notFound);
+        if (!attachment.getTicket().getId().equals(ticketId)) throw AppException.notFound();
+
+        authorizationService.validateCanViewTicket(callerId, attachment.getTicket());
+
+        if (!attachment.getUploadedBy().getId().equals(callerId)
+                && !authorizationService.isModeratorOrAbove(callerId))
+            throw AppException.forbidden();
+
         attachmentRepository.delete(attachment);
         return ResponseEntity.noContent().build();
     }
